fix a bug with school programs header layout jumping

--- a/client/src/routes/account/schoolPrograms/style.scss
+++ b/client/src/routes/account/schoolPrograms/style.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   margin-bottom: 1em;
+
+  min-height: 85px;
 }
 
 .titleBlockLhs {
